# sub_project

./: README.md
backend/: .env  .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/core/: auth.py  jwt_context.py  settings.py
backend/app/db/: database.py
backend/app/db/CRUD/: user.py
backend/app/db/crud/: __init__.py  posts.py  user.py
backend/app/db/models/: posts.py  user.py
backend/app/db/schema/: user.py
backend/app/db/scheme/: posts.py  user.py
backend/app/middleware/: token_refresh.py
backend/app/routers/: post.py  user.py
backend/app/services/: __init__.py  post.py  user.py
frontend/front/: package-lock.json  package.json  vite.config.js
frontend/front/src/: App.jsx
frontend/front/src/Components/Modal/LoginModal/: index.jsx
frontend/front/src/Components/Modal/SignupModal/: index.jsx
frontend/front/src/Components/Modal/Ui/: FormButton.jsx  ModalLayout.jsx  index.js
frontend/front/src/Components/Navbar/: index.jsx
frontend/front/src/Components/Navbar/auth/: DAuthButtons.jsx  MobileAuthButtons.jsx
frontend/front/src/Components/Navbar/layout/: Categories.jsx  Logo.jsx  MobileMenu.jsx  MobileToggleButton.jsx  SearchMenu.jsx
frontend/front/src/Pages/CreatePost/: index.jsx
frontend/front/src/Pages/Main/: index.jsx
frontend/front/src/Pages/Membership/: index.jsx
frontend/front/src/components/Navbar/: index.jsx
frontend/front/src/constants/: categories.jsx  category.js  menuLinks.js
frontend/front/src/hooks/: useAuth.jsx  usePost.jsx
frontend/front/src/utils/: alertUtiles.js  alertUtils.js  api.js
(+20 files in other folders)
